[gd_scene load_steps=8 format=2]

[ext_resource path="res://models/garbageTruck.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player3D.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.822153, 1, 1.9326 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0, 0, 0, 35, 35, -50, -35, 35, -50, -35, -35, -50, 35, -35, -50 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.435294, 0.45098, 0.427451, 1 )

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.5
height = 1.0

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player3D" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollectionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="CollectionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.662191, 0 )
shape = SubResource( 1 )

[node name="VisionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="VisionHitbox" type="CollisionShape" parent="VisionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.344, -1.059 )
shape = SubResource( 2 )

[node name="Particles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.36713 )
emitting = false
amount = 16
lifetime = 0.8
local_coords = false
mesh = SubResource( 4 )
direction = Vector3( 0, 0, 1 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.5
damping = 15.0
color_ramp = SubResource( 5 )

[node name="garbageTruck" parent="." instance=ExtResource( 1 )]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 223, 103 )

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00557899, 1.34425, -1.04846 )
current = true

[connection signal="body_entered" from="CollectionArea" to="." method="enter_apple_in_reach"]
[connection signal="body_exited" from="CollectionArea" to="." method="exit_apple_from_reach"]
[connection signal="body_entered" from="VisionArea" to="." method="enter_apple_in_sight"]
[connection signal="body_exited" from="VisionArea" to="." method="exit_apple_from_sight"]
